# copilot-taller01

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: LoginPage.jsx  WelcomePage.jsx
frontend/src/services/: auth.js
