[tool.poetry]
name = "jwt-fastapi-backend"
version = "0.1.0"
description = "FastAPI JWT demo"
authors = ["Copilot Agent <copilot@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
PyJWT = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
